--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -3,7 +3,10 @@
 @import url('https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap&text=pandomedia');
 @import './Card.scss';
 
-html {font-size: 16px;}
+html {
+    font-size: 16px;
+    height: 100%;
+}
 
 body {
     font-weight: 400;
@@ -12,14 +15,13 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
     color: #333333;
-    width: 100%;
+   
 }
 
-h1, h2 {
+h1, h2, p {
     font-family: 'Roboto Slab', serif;
     font-weight: 300;
     line-height: 1.25;
-    width: max-content;
     margin: 0;
     color: #333333;
 }
@@ -40,24 +42,48 @@ header {
     color: #333333;
     padding: 16px;
     box-sizing: border-box;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    box-shadow: 0 2px 40px 0 rgba(0, 0, 0, 0.1);
 }
 
-footer {
-    background-color: #333333;
-    height: 64px;
+main {
+    margin-top: 64px;
+    width: 100%;
+    perspective: 1px;
+    transform-style: preserve-3d;
+    height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    background: linear-gradient(to left, #e9e8e6, #dbd8d3);
+    position: relative;
 }
 
 .hero {
+    background-image: url('../images/hero2.jpeg');
     display: flex;
-    align-items: center;
+    flex: 1 0 auto;
+    position: relative;
+    z-index: -1;
+    height: 100vh;
     justify-content: center;
-    background-image: url('../images/hero.jpg');
+    align-items: center;
+    transform: translateZ(-1px) scale(2);
+    background-color: #e9e8e6;
     background-repeat: no-repeat;
-    background-position: center;
     background-size: cover;
+    background-position: center;
+}
+
+.content {
+    position: absolute;
+    top: 180px;
     width: 100%;
-    height: 35vw;
-    max-height: 500px;
+    padding: 0 60px;
+    min-height: 100%;
+    box-sizing: border-box;
 }
 
 .groups {
@@ -65,6 +91,13 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1300px;
+    background-color: #ffffff;
+    margin: 0 auto;
+    padding: 60px 16px;
+    box-sizing: border-box;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
     &__wrapper {
         display: flex;
         align-items: center;
@@ -72,14 +105,44 @@ footer {
         flex-wrap: wrap;
         margin-top: 24px;
     }
+    &__text {
+        margin: 0 16px;
+    }
+}
+
+.price {
+    max-width: 100vw;
+    background-color: #ffffff;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    text-align: center;
+    font-family: 'Roboto Slab', serif;
+    height: 64px;
+    line-height: 64px;
+    box-shadow: 0 2px 40px 0 rgba(0, 0, 0, 0.1);
+    &__old {
+        font-family: 'Roboto', sans-serif;
+        color: #666666;
+        margin: 0 12px;
+    }
+    &__old-active {
+        text-decoration: line-through;
+    }
 }
 
 .sales {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1300px;
+    background-color: #ffffff;
+    margin: 0 auto;
+    padding: 24px 12px 100px;
+    box-sizing: border-box;
     &__wrapper {
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
     }
 }
@@ -90,7 +153,7 @@ footer {
     justify-content: center;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    margin: 24px 12px 64px;
+    margin: 24px 12px 0;
     padding: 16px 24px;
     box-sizing: border-box;
     &__header {
@@ -114,32 +177,39 @@ footer {
 @media (max-width: 1023px) {
     h1 {font-size: 4.209em;} 
     h2 {font-size: 1.869em;}
-
-    .groups {
-        margin: 24px 16px 32px;
+    .content {
+        padding: 0 28px;
     }
 }
 
 @media (max-width: 767px) {
-    .hero {
-        height: 50vw;
+    h1 {font-size: 3.209em;} 
+    h2 {font-size: 1.269em;}
+    .content {
+        top: 64px;
+        padding: 0 16px;
     }
     .sales {
+        padding: 24px 12px 68px;
         &__wrapper {
             display: block;
         }
     }
     .groups {
-        margin: 24px 16px;
+        padding: 28px 11px 0;
         &__wrapper {
             display: block;
             margin-top: 0;
             width: 100%;
         }
+        &__text {
+            font-size: 14px;
+            margin: 0;
+        }
     }
     .sale {
-        margin: 16px 0;
-        width: 100%;
+        margin: 12px 0;
+        padding: 8px;
         &__header {
             font-size: 42px;
             width: 90px;
