--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -1,11 +1,17 @@
 .card {
-    width: 30%;
+    width: 28%;
+    max-width: 350px;
     border-radius: 8px;
     overflow: hidden;
-    margin: 12px;
+    margin: 16px;
     position: relative;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0);
+    &__selected {
+        border: 1px solid rgba(51, 51, 51, 0.5);
+    }
     &__image {
         height: 240px;
         background-repeat: no-repeat;
@@ -48,15 +54,10 @@
     }
 }
 
-@media (min-width: 1220px) {
-    .card {
-        width: 22%;
-    }
-}
-
 @media (max-width: 1023px) {
     .card {
-        margin: 8px;
+        margin: 12px;
+        width: 45%;
         &__image {
             height: 200px;
         }
